# doci

./: .env.sample  .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: lint-fix.yml  lint.yml  migration-fix.yml  migration-local.yml  migration-remote.yml  release.yml  tag-latest.yml
commands/: __init__.py  all_in_one.py  api.py  scheduler.py  worker.py  worker_mon.py
data/: seed_audit.sh
doci/: bootstrap.py
doci/activities/: __init__.py  _vision.py  annotate_image.py  annotate_text.py  create_thumb_excel.py  create_thumb_image.py  create_thumb_pdf.py  download_media.py  ensure_thumb.py  extract_content_excel.py  extract_content_image.py  extract_content_pdf.py  extract_content_pdf_graphic.py  extract_content_pdf_plain.py  fields.py  finalize_document.py  finalize_media.py  reflect.py  render_image_pdf.py  save_result_to_disk.py  save_result_to_postgres.py  split_pdf.py  upload_media.py
doci/api/: app.py  (+2 more)
docker/: Dockerfile  Dockerfile.all_in_one  Dockerfile.api  Dockerfile.base  Dockerfile.scheduler  Dockerfile.scheduler.dockerignore  Dockerfile.worker  Dockerfile.worker_mon  Dockerfile.worker_mon.dockerignore  compose.langfuse.yml  compose.minio.yml  compose.phoenix.yml  compose.postgres.yml  compose.rustfs.yml  compose.valkey.yml  compose.vllm.yml  compose.yml
migrations/: 20260601000000_create_media.sql  20260608000000_create_workflow_execution.sql  20260609000000_create_workflow_result.sql  20260610000000_create_document.sql  20260610000001_create_document_part.sql  20260610000002_slim_media.sql  20260610000003_result_on_part.sql  20260611081200_create_userdata.sql  20260618064408_create_userdata_v2.sql  20260618075635_drop_legacy_userdata.sql  20260618084628_knowledge.sql  20260618100314_audit_findings.sql  20260619040000_enable_pg_trgm.sql  atlas.hcl  atlas.sum
tests/: test_activities_offload.py  test_annotate_reflect.py  test_annotate_reflect_gate.py  test_audit_reflect_node.py  test_image_transcribe_node.py  test_llm.py  test_pool_concurrency_report.py  test_postgres_pool.py  test_ratelimit_bucket.py  test_ratelimit_middleware.py
(+177 files in other folders)
