[project]
name = "doci"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.18",
    "cachetools>=7.1.4",
    "deepagents>=0.6.7",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.2",
    "langgraph>=1.2.2",
    "openpyxl>=3.1.5",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-botocore>=0.63b1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-psycopg2>=0.63b1",
    "opentelemetry-instrumentation-redis>=0.63b1",
    "opentelemetry-instrumentation-system-metrics>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-semantic-conventions>=0.63b1",
    "psycopg2-binary>=2.9.12",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "redis[hiredis]>=7.0.0",
    "ruff>=0.15.15",
    "taskiq-redis>=1.2.2",
    "taskiq[opentelemetry]>=0.12.4",
    "uvicorn>=0.48.0",
]

[project.scripts]
doci-all-in-one = "commands.all_in_one:main"
doci-api = "commands.api:main"
doci-worker = "commands.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["doci", "commands"]
